--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ commonmark==0.9.1
 keyboard==0.13.5
 mypy-extensions==0.4.3
 pathspec==0.8.1
+pyfiglet==0.8.post1
 Pygments==2.9.0
 regex==2021.4.4
 rich==10.2.2
