--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "boxen": "^5.0.1",
     "chalk": "^4.1.1",
     "cli-highlight": "^2.1.11",
+    "figlet": "^1.5.0",
     "marked": "^2.1.1",
     "marked-terminal": "^4.1.1",
     "table": "^6.7.1"
   },
   "devDependencies": {
+    "@types/figlet": "^1.5.1",
     "@types/marked": "^2.0.3",
     "@types/marked-terminal": "^3.1.1"
   }
