--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc index.ts --outDir ./dist --esModuleInterop true --allowJs true --declaration false & node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "boxen": "^5.0.1",
     "chalk": "^4.1.1",
     "cli-highlight": "^2.1.11",
+    "console-png": "^1.2.1",
     "figlet": "^1.5.0",
     "marked": "^2.1.1",
     "marked-terminal": "^4.1.1",
