--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "figlet": "^1.5.0",
     "marked": "^2.1.1",
     "marked-terminal": "^4.1.1",
+    "open": "^8.2.0",
     "table": "^6.7.1"
   },
   "devDependencies": {
