--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "figlet": "^1.5.0",
     "marked": "^2.1.1",
     "marked-terminal": "^4.1.1",
+    "mime-types": "^2.1.31",
     "open": "^8.2.0",
-    "table": "^6.7.1"
+    "table": "^6.7.1",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@types/figlet": "^1.5.1",
     "@types/marked": "^2.0.3",
-    "@types/marked-terminal": "^3.1.1"
+    "@types/marked-terminal": "^3.1.1",
+    "@types/mime-types": "^2.1.0",
+    "@types/yaml": "^1.9.7"
   }
 }
