--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cli-highlight": "^2.1.11",
     "console-png": "^1.2.1",
     "figlet": "^1.5.0",
+    "isbinaryfile": "^4.0.8",
     "marked": "^2.1.1",
     "marked-terminal": "^4.1.1",
     "mime-types": "^2.1.31",
