--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "table": "^6.7.1"
   },
   "devDependencies": {
+    "@types/discord-rpc": "^3.0.5",
     "@types/figlet": "^1.5.1",
     "@types/marked": "^2.0.3",
     "@types/marked-terminal": "^3.1.1"
