--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "marked-terminal": "^4.1.1",
     "mime-types": "^2.1.31",
     "open": "^8.2.0",
-    "table": "^6.7.1"
+    "table": "^6.7.1",
+    "typescript" : "^4.3.4"
   },
   "devDependencies": {
     "@types/discord-rpc": "^3.0.5",
