--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/figlet": "^1.5.1",
     "@types/marked": "^2.0.3",
     "@types/marked-terminal": "^3.1.1",
+    "oral-ts": "^1.0.2",
     "ts-node": "^10.0.0"
   },
   "bin": {
