--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
   "homepage": "https://github.com/pranavbaburaj/termex#readme",
   "dependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/inquirer": "^7.3.3",
     "@types/node": "^15.12.2",
     "boxen": "^5.0.1",
     "chalk": "^4.1.1",
     "cli-highlight": "^2.1.11",
     "console-png": "^1.2.1",
     "discord-rpc": "^4.0.1",
+    "dropbox": "^10.5.0",
     "figlet": "^1.5.0",
+    "inquirer": "^8.1.2",
     "isbinaryfile": "^4.0.8",
     "marked": "^2.1.1",
     "marked-terminal": "^4.1.1",
