--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/chalk": "^2.2.0",
     "@types/inquirer": "^7.3.3",
     "@types/node": "^15.12.2",
+    "axios": "^0.22.0",
     "boxen": "^5.0.1",
     "chalk": "^4.1.1",
     "cli-highlight": "^2.1.11",
