--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "dependencies": {
     "@octokit/core": "^3.5.1",
     "@types/chalk": "^2.2.0",
-    "@types/get-image-colors": "^4.0.1",
     "@types/inquirer": "^7.3.3",
     "@types/node": "^15.12.2",
     "axios": "^0.22.0",
@@ -41,7 +40,6 @@
     "discord-rpc": "^4.0.1",
     "extract-zip": "^2.0.1",
     "figlet": "^1.5.0",
-    "get-image-colors": "^4.0.0",
     "googleapis": "^39.2.0",
     "image-size": "^1.0.0",
     "inquirer": "^8.1.2",
@@ -51,13 +49,16 @@
     "mime-types": "^2.1.31",
     "open": "^8.2.0",
     "table": "^6.7.1",
+    "terminal-image": "^2.0.0",
     "typescript": "^4.3.4"
   },
   "devDependencies": {
     "@types/discord-rpc": "^3.0.5",
     "@types/figlet": "^1.5.1",
+    "@types/get-pixels": "^3.3.1",
     "@types/marked": "^2.0.3",
     "@types/marked-terminal": "^3.1.1",
+    "get-pixels": "^3.3.3",
     "oral-ts": "^1.0.2",
     "ts-node": "^10.0.0"
   },
