feat: file property

--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "extract-zip": "^2.0.1",
     "figlet": "^1.5.0",
     "googleapis": "^39.2.0",
-    "image-size": "^1.0.0",
     "inquirer": "^8.1.2",
     "isbinaryfile": "^4.0.8",
     "marked": "^2.1.1",
@@ -56,9 +55,11 @@
     "@types/discord-rpc": "^3.0.5",
     "@types/figlet": "^1.5.1",
     "@types/get-pixels": "^3.3.1",
+    "@types/image-size": "^0.8.0",
     "@types/marked": "^2.0.3",
     "@types/marked-terminal": "^3.1.1",
     "get-pixels": "^3.3.3",
+    "image-size": "^1.0.0",
     "oral-ts": "^1.0.2",
     "ts-node": "^10.0.0"
   },
